support download sequentially
update readme ; avoid empty line

prototype

update program.cs

add actions, update name of ASWrapper, update readme

update wrapper and workflow

stable asset wrapper

update workflow to filter artifacts

update workflow about list command

update workflow

add more tools

support to archive assetList file

update workflow about Commit artifacts step

add new step to checkout artifacts without cleaning

update checkout using branch syntax

update checkout using branch syntax

auto-update asset list

add step remove AssetStudio

update workflow

Copy-Item Recurse

add empty asset list

update workflow about skip step

auto-update asset list

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update workflow about skip step

update schedule

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "author": "salmon",
   "license": "MIT",
   "scripts": {
+    "download:official-bundles": "ts-node tools/download-official-bundles.ts",
+    "remove:sensitive-assets": "ts-node tools/remove-sensitive-assets.ts",
+    "remove:duplicated-assets": "ts-node tools/remove-duplicated-assets.ts",
+    "watch:finish-indicator": "ts-node tools/watch-finish-indicator.ts"
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
