--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -20,7 +20,7 @@ jobs:
       BUNDLES_DIR: bundles
       ARTIFACTS_DIR: artifacts
       FINISH_INDICATOR: done
-      SELECTED_FOLDERS: Texture2D, Sprite
+      SELECTED_FOLDERS: Texture2D, Sprite, Monobehaviour
       ARTIFACTS_BRANCH: artifacts
     runs-on: windows-2019
     strategy:
