--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -1,31 +1,25 @@
-name: download-and-extract
+name: Download-and-extract
 
 on:
-  schedule:
-    # At minute 15.
-    - cron: '15 * * * *'
-  workflow_dispatch:
-    inputs:
-      run:
-        description: just run by manually
-        required: false
+  #schedule:
+  #  - cron: '0 * * * *'
+  workflow_dispatch: ~
 
 jobs:
   build:
     name: Build
     env:
-      MY_SECRET: ${{secrets.commit_secret}}
-      USER_NAME: githubaction
-      USER_EMAIL: githubaction@fake.com
+      USER_NAME: lah-wiki-bot
+      USER_EMAIL: noreply@github.com
       BUNDLES_DIR: bundles
       ARTIFACTS_DIR: artifacts
       FINISH_INDICATOR: done
-      SELECTED_FOLDERS: Texture2D, Sprite, MonoBehaviour
       ARTIFACTS_BRANCH: artifacts
     runs-on: windows-2019
     strategy:
       matrix:
         node-version: [12.x]
+        python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
 
@@ -54,53 +48,85 @@ jobs:
           .\AssetStudio\Release\AssetStudioConsole.exe ${env:BUNDLES_DIR} ${env:ARTIFACTS_DIR} ${env:FINISH_INDICATOR}
           npm run watch:finish-indicator -- ${env:FINISH_INDICATOR}
           Remove-Item ${env:FINISH_INDICATOR}
-          Get-Childitem ${env:ARTIFACTS_DIR} -include * -depth 100
+          (dir -r ${env:ARTIFACTS_DIR}).FullName
 
       - name: Filter assets
         if: env.BUNDLE_COUNT != '0'
         run: |
-          npm run remove:sensitive-assets -- ${env:ARTIFACTS_DIR} ${env:SELECTED_FOLDERS}
           npm run remove:duplicated-assets -- ${env:ARTIFACTS_DIR}
 
-      - name: Commit asset list info
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         if: env.BUNDLE_COUNT != '0'
-        run: |
-          New-Item -Path . -Name temp -ItemType directory
-          git diff version/ > temp/version.diff
-          $Env:DIFF_SIZE = (Get-Content .\temp\version.diff).Length
-          Remove-Item -Recurse -Force temp
+        with:
+          python-version: ${{ matrix.python-version }}
 
-          if (${env:DIFF_SIZE} -eq 0) {
-            Write-Output "Assets are already up to date."
-          } else {
-            Write-Output "Asset list is updated."
-            git config --global user.name ${env:USER_NAME}
-            git config --global user.email ${env:USER_EMAIL}
-            git status
-            git add --all
-            git commit -m "auto-update asset list"
-            git push origin HEAD
-            Write-Output "🤘 update version complete."
-          }
+      - name: Process JSON files
+        if: env.BUNDLE_COUNT != '0'
+        working-directory: ${{ env.ARTIFACTS_DIR }}
+        run: |
+          python ..\preprocess.py
 
       - uses: actions/checkout@v2
         if: env.BUNDLE_COUNT != '0'
         with:
           ref: ${{ env.ARTIFACTS_BRANCH }}
+          path: GH
           clean: false
 
-      - name: Commit artifacts
+      - name: Commit images
         if: env.BUNDLE_COUNT != '0'
+        working-directory: GH
         run: |
-          Get-Childitem .
-          Copy-Item -Force -Recurse -Path ${env:ARTIFACTS_DIR}\* -Destination .
-          Remove-Item -Recurse -Force ${env:ARTIFACTS_DIR}
-          Remove-Item -Recurse -Force ${env:BUNDLES_DIR}
-          Remove-Item -Recurse -Force AssetStudio
-          Remove-Item -Recurse -Force node_modules
+          Copy-Item -Force -Recurse -Path ..\${env:ARTIFACTS_DIR}\* -Destination .
           git config --global user.name ${env:USER_NAME}
           git config --global user.email ${env:USER_EMAIL}
-          git status
-          git add --all
-          git commit -m "auto-extract assets to artifacts"
+
+          git add MonoBehaviour\fg_*.json
+          git add Texture2D\fg_*.png
+          git add Sprite\icon_*.png
+          git add Sprite\item_*.png
+          git add Sprite\b_skill*.png
+          git add Sprite\status_*.png
+          #git add Sprite\banner_*.png
+
+          git commit -m "Auto-extract assets to artifacts"
           git push origin HEAD
+
+      - uses: actions/checkout@v2
+        if: env.BUNDLE_COUNT != '0'
+        with:
+          repository: ${{ secrets.BOOK_REPO }}
+          token: ${{ secrets.BOOK_SECRET }}
+          path: BOOK
+          clean: false
+
+      - name: Commit books
+        if: env.BUNDLE_COUNT != '0'
+        working-directory: BOOK
+        run: |
+          Copy-Item -Force -Recurse -Path ..\${env:ARTIFACTS_DIR}\MonoBehaviour\* -Destination .
+          git config --global user.name ${env:USER_NAME}
+          git config --global user.email ${env:USER_EMAIL}
+
+          git add *.book.json
+          git add *.chapter.json
+
+          git commit -m "Auto-extract assets to artifacts"
+          git push origin HEAD
+
+      #- name: Commit asset list info
+      #  if: env.BUNDLE_COUNT != '0'
+      #  run: |
+      #    $cmdOutput = (git status --porcelain --untracked-files=no) | Out-String
+      #    if ($cmdOutput.length -gt 8) {
+      #      Write-Output "Asset list is updated."
+      #      git config --global user.name ${env:USER_NAME}
+      #      git config --global user.email ${env:USER_EMAIL}
+      #      git add version
+      #      git commit -m "Auto-update asset list"
+      #      git push origin HEAD
+      #      Write-Output "🤘 update version complete."
+      #    } else {
+      #      Write-Output "Assets are already up to date."
+      #    }
