--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -41,15 +41,10 @@ jobs:
           Write-Output "BUNDLE_COUNT: ${env:BUNDLE_COUNT}"
           echo "BUNDLE_COUNT=${env:BUNDLE_COUNT}" >> ${env:GITHUB_ENV}
 
-      - uses: dsaltares/fetch-gh-release-asset@master
-        with:
-          repo: "liveahero-wiki/cdn"
-          version: "latest"
-          file: "AssetStudio.zip"
-
       - name: Extract bundles
         if: env.BUNDLE_COUNT != '0'
         run: |
+          curl -L https://github.com/liveahero-wiki/cdn/releases/download/0.1/AssetStudio.zip > AssetStudio.zip
           Expand-Archive -Path AssetStudio.zip -DestinationPath AssetStudio
           .\AssetStudio\Release\AssetStudioConsole.exe ${env:BUNDLES_DIR} ${env:ARTIFACTS_DIR} ${env:FINISH_INDICATOR}
           npm run watch:finish-indicator -- ${env:FINISH_INDICATOR}
