--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -40,6 +40,7 @@ jobs:
           $Env:BUNDLE_COUNT = (Get-ChildItem ${env:BUNDLES_DIR} | Measure-Object).Count
           Write-Output "BUNDLE_COUNT: ${env:BUNDLE_COUNT}"
           echo "BUNDLE_COUNT=${env:BUNDLE_COUNT}" >> ${env:GITHUB_ENV}
+          (dir -r ${env:BUNDLES_DIR}).FullName
 
       - name: Extract bundles
         if: env.BUNDLE_COUNT != '0'
@@ -54,6 +55,7 @@ jobs:
       - name: Filter assets
         if: env.BUNDLE_COUNT != '0'
         run: |
+          (dir -r .).FullName
           npm run remove:duplicated-assets -- ${env:ARTIFACTS_DIR}
 
       - name: Set up Python ${{ matrix.python-version }}
