--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -3,7 +3,12 @@ name: Download-and-extract
 on:
   schedule:
     - cron: '0 * * * *'
-  workflow_dispatch: ~
+  workflow_dispatch:
+    inputs:
+      forceVersion:
+        description: 'Define appVersion'     
+        required: true
+        default: ''
 
 jobs:
   build:
@@ -36,6 +41,7 @@ jobs:
         id: bundles
         run: |
           New-Item -Path . -Name ${env:BUNDLES_DIR} -ItemType directory
+          $Env:FORCE_VERSION = {{ github.event.inputs.forceVersion }} 
           npm run download:official-bundles
           $Env:BUNDLE_COUNT = (Get-ChildItem ${env:BUNDLES_DIR} | Measure-Object).Count
           Write-Output "BUNDLE_COUNT: ${env:BUNDLE_COUNT}"
