--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -22,7 +22,7 @@ jobs:
       ARTIFACTS_DIR: artifacts
       FINISH_INDICATOR: done
       ARTIFACTS_BRANCH: gh-pages
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       matrix:
         node-version: [16.x]
