--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -121,7 +121,7 @@ jobs:
           git add Sprite\banner_*.jpg
           git add Sprite\ui_frame_*.png
           git add Sprite\ui_icon_*.png
-          git add Sprite\ui_banner_info_*.png
+          git add Sprite\ui_banner_info_*.jpg
 
           git commit -m "Auto-extract assets to artifacts"
           git push origin HEAD
