Add skillTree_* files

--- a/.github/workflows/download-and-extract.yml
+++ b/.github/workflows/download-and-extract.yml
@@ -122,6 +122,7 @@ jobs:
           git add Sprite\ui_frame_*.png
           git add Sprite\ui_icon_*.png
           git add Sprite\ui_banner_info_*.jpg
+          git add Sprite\skillTree_*.png
 
           git commit -m "Auto-extract assets to artifacts"
           git push origin HEAD
