Fix Texture2D dest directory

--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -119,7 +119,7 @@ jobs:
         working-directory: GH
         run: |
           Copy-Item -Force -Recurse -Path ..\${env:ARTIFACTS_DIR}\* -Destination .
-          Copy-Item -Force -Recurse -Path ..\${env:ARTIFACTS_RIPPER_DIR}\ExportedProject\Assets\Texture2D\* -Destination .
+          Copy-Item -Force -Recurse -Path ..\${env:ARTIFACTS_RIPPER_DIR}\ExportedProject\Assets\Texture2D\* -Destination .\Texture2D\
           git config --global user.name ${env:USER_NAME}
           git config --global user.email ${env:USER_EMAIL}
 
