--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -121,7 +121,10 @@ jobs:
         run: |
           Copy-Item -Force -Recurse -Path ..\${env:ARTIFACTS_DIR}\MonoBehaviour\* -Destination .\MonoBehaviour\
           Move-Item -Force -Path ..\${env:ARTIFACTS_DIR}\Sprite\* -Destination .\Sprite\
-          Move-Item -Force -Path ..\${env:ARTIFACTS_RIPPER_DIR}\ExportedProject\Assets\Texture2D\* -Destination .\Texture2D\
+          $Folder = '..\${env:ARTIFACTS_RIPPER_DIR}\ExportedProject\Assets\Texture2D'
+          if (Test-Path -Path $Folder) {
+            Move-Item -Force -Path  $Folder\* -Destination .\Texture2D\
+          }
 
           git config --global user.name ${env:USER_NAME}
           git config --global user.email ${env:USER_EMAIL}
