--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -137,6 +137,7 @@ jobs:
           git add Sprite\ui_frame_*.png
           git add Sprite\ui_icon_*.png
           git add Sprite\ui_banner_info_*.jpg
+          git add Sprite\ui_banner_event_*.jpg
           git add Sprite\skillTree_*.png
 
           git commit -m "Auto-extract assets to artifacts"
