--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -115,6 +115,12 @@ jobs:
           path: GH
           clean: false
 
+      - name: List artifacts
+        if: env.BUNDLE_COUNT != '0'
+        working-directory: GH
+        run: |
+          Get-ChildItem -Recurse ..\${env:ARTIFACTS_DIR}\
+
       - name: Commit images
         if: env.BUNDLE_COUNT != '0'
         working-directory: GH
