Include ui_banner_event

--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -143,6 +143,7 @@ jobs:
           git add Sprite\ui_frame_*.png
           git add Sprite\ui_icon_*.png
           git add Sprite\ui_banner_info*.jpg
+          git add Sprite\ui_banner_event*.jpg
           git add Sprite\skillTree_*.png
 
           git commit -m "Auto-extract assets to artifacts"
