--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -145,6 +145,7 @@ jobs:
           git add Sprite\ui_banner_info*.jpg
           git add Sprite\ui_banner_event*.jpg
           git add Sprite\skillTree_*.png
+          git add Sprite\tex_*.png
 
           git commit -m "Auto-extract assets to artifacts"
           git push origin HEAD
