Use texture2d tex_pixel

--- a/.github/workflows/download-and-extract-v2.yml
+++ b/.github/workflows/download-and-extract-v2.yml
@@ -135,7 +135,7 @@ jobs:
 
           git add MonoBehaviour\fg_*.json
           git add Texture2D\fg_*.png
-          git add Sprite\tex_pixel*.png
+          git add Texture2D\tex_pixel*.png
           git add Sprite\icon_*.png
           git add Sprite\item_*.png
           git add Sprite\b_skill*.png
